--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,18 +4,26 @@
         "es2021": true,
         "node": true
     },
-    "extends": "plugin:react/recommended",
-    "overrides": [
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "prettier",
+        "prettier/@typescript-eslint"
     ],
+    "overrides": [],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "project": "./tsconfig.json"
     },
     "plugins": [
         "react",
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "@typescript-eslint/eslint-plugin"
     ],
-    "rules": {
-    }
+    "rules": {}
 }
